# vita-49

./: .gitignore  README
vrt/: .gitignore  Makefile.am  Makefile.common  README  bootstrap  configure.ac  version.sh
vrt-ctrl/: Makefile.am  README  configure.ac
vrt-ctrl/common/: Makefile.am
vrt-ctrl/common/lib/: Makefile.am  datagram_buffer.c  device_prims.c  encode_Expr.c  expr.c  expr_print.c  host_prims.c  vrtc_expr.c  vrtc_host.c
vrt-ctrl/common/libasn1c/: .gitignore  BIT_STRING.c  BOOLEAN.c  Complex-float.c  Complex-int.c  Expr.c  IEEE-float.c  INTEGER.c  Makefile.am  NULL.c  NativeEnumerated.c  NativeInteger.c  OCTET_STRING.c  asn_SEQUENCE_OF.c  asn_SET_OF.c  asn_codecs_prim.c  ber_decoder.c  ber_tlv_length.c  ber_tlv_tag.c  constr_CHOICE.c  constr_SEQUENCE.c  constr_SEQUENCE_OF.c  constr_SET_OF.c  constr_TYPE.c  constraints.c  der_encoder.c  fix_asn1c_includes  per_decoder.c  per_encoder.c  per_support.c  xer_decoder.c  xer_encoder.c  xer_support.c
vrt-ctrl/device/: Makefile.am
vrt-ctrl/device/lib/: Makefile.am  handle_op.c  handle_op.h  resolve_resource.c  resolve_resource.h  vrtcd_handle_incoming_datagram.c
vrt-ctrl/device/sim/: .gitignore  Makefile.am  dev-sim-main.cc  handle_datagram_echo.c  resource-impl.c  resource-impl.h  resource-implementations.c  resource-tree.c
vrt-ctrl/host/: Makefile.am
vrt-ctrl/host/apps/: .gitignore  Makefile.am  encode_Expr.c  max_payload.h  udp_connection.h  vrtc-enumerate.cc  vrtc-ping-raw.cc  vrtc-ping.cc
vrt-ctrl/host/lib/: Makefile.am
vrt-ctrl/include/vrt/: asn1-lite.h
vrt-ctrl/include/vrtc/: datagram_buffer.h  device_prims.h  expr.h  host_prims.h  ports.h  protocol-consts.h  send_datagram.h
vrt-ctrl/include/vrtc/asn1c/: BIT_STRING.h  BOOLEAN.h  Complex-float.h  Complex-int.h  Expr.h  IEEE-float.h  INTEGER.h  NULL.h  NativeEnumerated.h  NativeInteger.h  OCTET_STRING.h  asn_SEQUENCE_OF.h  asn_application.h  asn_codecs_prim.h  asn_internal.h  ber_decoder.h  constr_CHOICE.h  constr_SEQUENCE.h  constr_SEQUENCE_OF.h  constr_SET_OF.h  constr_TYPE.h  constraints.h  der_encoder.h  per_decoder.h  per_encoder.h  per_support.h  xer_decoder.h  xer_encoder.h  xer_support.h
vrt-ctrl/include/vrtc/device/: handle_datagram.h  vrtd_node.h
vrt-ctrl/lib/: .gitignore  Makefile.am  encode_Expr.c  vrtc_expr.c  vrtc_expr.h  vrtc_expr_host.c  vrtc_host.c  vrtc_host.h
vrt-ctrl/lib-asn1c/: .gitignore  Makefile.am
vrt-ctrl/limbo/: asn1-lite.c
vrt-ctrl/m4/: Makefile.am
vrt-ctrl/protocol/: .gitignore  Makefile.am  README  encode_Expr.c  property-naming-ideas.txt  vrt-ctrl-asn1-types.asn1  vrt-ctrl-protocol.txt  vrt-ctrl.asn1  vrtc_expr.c  vrtc_expr.h
vrt/apps/: Makefile.am
vrt/lib/: Makefile.am
vrt/m4/: gr_git.m4
